# fiberfoam

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  stale.yml
docker/: Dockerfile  Dockerfile.core  docker-compose.yml  entrypoint.sh  extract-openfoam-runtime.sh  launch.bat  launch.ps1  launch.sh
docs/: cli_reference.md  gui_guide.md  index.md  installation.md  mkdocs.yml  quickstart.md
docs/development/: architecture.md  contributing.md
docs/theory/: fiber_free_regions.md  permeability.md
examples/: basic_mesh.sh  config_example.yml  predict_and_simulate.sh
gui/: Dockerfile.gui
gui/backend/: main.py  requirements.txt  schemas.py
gui/backend/routes/: filesystem.py  geometry.py  mesh.py  paraview.py  pipeline.py  postprocess.py  prediction.py  preprocess.py  results.py  simulation.py
gui/backend/services/: config_writer.py  executor.py  fno_numpy.py  job_store.py  paths.py  predictor.py
gui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/frontend/api/: feedback.ts
gui/frontend/src/: App.tsx  main.tsx
gui/frontend/src/api/: client.ts
gui/frontend/src/components/: ConvergenceChart.tsx  FolderPicker.tsx  LogViewer.tsx  NumberInput.tsx  PermeabilityTable.tsx  ProgressIndicator.tsx  RamMonitor.tsx  Sidebar.tsx  Viewer3D.tsx
gui/frontend/src/context/: WorkflowContext.tsx
gui/frontend/src/hooks/: useWebSocket.ts
gui/frontend/src/pages/: BatchPage.tsx  GeometryPage.tsx  JobHistoryPage.tsx  MeshPage.tsx  PipelinePage.tsx  PostProcessPage.tsx  PredictionPage.tsx  SetupPage.tsx  SimulationPage.tsx
gui/frontend/src/styles/: index.css
models/: models.yml  scaling_factors.json
models/res80_fno/: x_80_fno.npz  y_80_fno.npz  z_80_fno.npz
models/res80_fno/x_80_tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/res80_fno/x_80_tf/variables/: variables.data-00000-of-00001  variables.index
models/res80_fno/y_80_tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/res80_fno/y_80_tf/variables/: variables.data-00000-of-00001  variables.index
models/res80_fno/z_80_tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/res80_fno/z_80_tf/variables/: variables.data-00000-of-00001  variables.index
scripts/: check_geometry_axes.py  compare_tf_onnx.py  export_fno_weights.py  verify_orientation.py  visualize_predictions.py
src/apps/: CMakeLists.txt
src/apps/fiberFoamConvertModel/: main.cpp
src/apps/fiberFoamInfo/: main.cpp
src/apps/fiberFoamMesh/: main.cpp
src/apps/fiberFoamPostProcess/: main.cpp
src/apps/fiberFoamPredict/: main.cpp
src/apps/fiberFoamRun/: main.cpp
src/libfiberfoam/: CMakeLists.txt
src/libfiberfoam/analysis/: FiberOrientation.cpp  FiberOrientation.h  VelocityReconstruction.cpp  VelocityReconstruction.h
src/libfiberfoam/common/: Logger.cpp  Logger.h  Timer.h  Types.h  Version.h.in
src/libfiberfoam/config/: FluidProperties.h  SimulationConfig.cpp  SimulationConfig.h
src/libfiberfoam/geometry/: FiberFreeRegion.cpp  FiberFreeRegion.h  RegionTracker.cpp  RegionTracker.h  VoxelArray.cpp  VoxelArray.h
src/libfiberfoam/io/: ArrayIO.cpp  ArrayIO.h  CsvWriter.cpp  CsvWriter.h  FoamReader.cpp  FoamReader.h  FoamWriter.cpp  FoamWriter.h
src/libfiberfoam/mesh/: Connectivity.cpp  Connectivity.h  FaceGenerator.cpp  FaceGenerator.h  HexMeshBuilder.cpp  HexMeshBuilder.h  MeshData.h
src/libfiberfoam/ml/: ModelRegistry.cpp  ModelRegistry.h  OnnxPredictor.cpp  OnnxPredictor.h  Scaling.cpp  Scaling.h
src/libfiberfoam/postprocessing/: Convergence.cpp  Convergence.h  Permeability.cpp  Permeability.h
src/solver/simpleFoamMod/: createFields.H  permCalc.H  permConv.H  polynomialRegressionNew.h  simpleFoamMod.C  writeFile.H
src/solver/simpleFoamMod/Make/: files  options
tests/: CMakeLists.txt
tests/fixtures/: expected_mesh_3x3x3.json  sample_scaling_factors.json
tests/integration/: test_buffer_pipeline.cpp  test_mesh_pipeline.cpp  test_postprocess_pipeline.cpp  test_predict_pipeline.cpp
tests/unit/: test_Connectivity.cpp  test_Convergence.cpp  test_FaceGenerator.cpp  test_FiberFreeRegion.cpp  test_FiberOrientation.cpp  test_FoamWriter.cpp  test_HexMeshBuilder.cpp  test_ModelRegistry.cpp  test_OnnxPredictor.cpp  test_Permeability.cpp  test_RegionTracker.cpp  test_SimulationConfig.cpp  test_VoxelArray.cpp
